--- a/content/resources/21g-013f05.md
+++ b/content/resources/21g-013f05.md
@@ -5,6 +5,8 @@ description: Beam from the World Trade Center on display in Boston, MA, Sept. 11
 file: /courses/21g-013-out-of-ground-zero-catastrophe-and-memory-fall-2005/cb7000089e705791c9805b107a2705d9_21g-013f05.jpg
 file_size: 19828
 file_type: image/jpeg
+hide_download: true
+hide_download_original: null
 image_metadata:
   caption: Beam from the World Trade Center on display in Boston, MA, Sept. 11, 2002.
     (Image courtesy of Daniel Bersak.)
